--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
-title: Hacker theme
-description: Hacker is a theme for GitHub Pages.
+title: Animal Crossing Modding
+description: ac-modding.com, a central source of info for modding AC.
 show_downloads: true
 google_analytics:
 theme: jekyll-theme-hacker
