Test, to see if that goes to other pages.

--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 title: Animal Crossing Modding
-description: ac-modding.com, a central source of info for modding AC.
+description: A central source of info for modding AC.
 show_downloads: true
 google_analytics:
 theme: jekyll-theme-hacker
