--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,4 @@
-title: Animal Crossing Modding
+title: ACModding
 description: A central source of info for modding AC.
 show_downloads: true
 google_analytics:
