--- a/assets/hekate_ipl.ini
+++ b/assets/hekate_ipl.ini
@@ -1,13 +1,13 @@
 [config]
 updater2p=1
 {------ Atmosphere ------}
-[Atmosphere FSS0 EmuMMC]
+[CFW (EMUNAND)]
 fss0=atmosphere/fusee-secondary.bin
 kip1=atmosphere/kips/*
 emummcforce=1
 icon=bootloader/res/emu_boot.bmp
 {}
-[Atmosphere FSS0 SYS]
+[CFW (SYSNAND)]
 fss0=atmosphere/fusee-secondary.bin
 kip1=atmosphere/kips/*
 emummc_force_disable=1
