Changed 'AC-Modding' to 'Animal Crossing Modding'

--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,4 @@
-title: ACModding
+title: Animal Crossing Modding
 description: A central source of info for modding AC.
 show_downloads: true
 google_analytics:
