Was it ever there in the first place?
Removed redundant description in default.html

The description is already in _config.yml, no reason to also have it in default.html.

--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 title: Animal Crossing Modding
-description: A central source of info for modding AC.
+description: A central source of info for modding AC. Treasure islands, save editing, and game mods all explained in one place!
 show_downloads: true
 google_analytics:
 theme: jekyll-theme-hacker
