--- a/assets/hekate_ipl.ini
+++ b/assets/hekate_ipl.ini
@@ -2,7 +2,7 @@
 updater2p=1
 {------ Atmosphere ------}
 [CFW (EMUNAND)]
-fss0=atmosphere/fusee-secondary.bin
+fss0=atmosphere/package3
 kip1=atmosphere/kips/*
 emummcforce=1
 icon=bootloader/res/emu_boot.bmp
