--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 title: Animal Crossing Modding
-description: A central source of info for modding AC. Treasure islands, save editing, and game mods all explained in one place!
+description: A central source of info for modding AC. 
 show_downloads: true
 google_analytics:
 theme: jekyll-theme-hacker
