--- a/assets/hekate_ipl.ini
+++ b/assets/hekate_ipl.ini
@@ -8,14 +8,14 @@ emummcforce=1
 icon=bootloader/res/emu_boot.bmp
 {}
 [CFW (SYSNAND)]
-fss0=atmosphere/fusee-secondary.bin
+fss0=atmosphere/package3
 kip1=atmosphere/kips/*
 emummc_force_disable=1
 icon=bootloader/res/sys_cfw_boot.bmp
 {}
 {-------- Stock ---------}
 [Stock SYS]
-fss0=atmosphere/fusee-secondary.bin
+fss0=atmosphere/package3
 stock=1
 emummc_force_disable=1
 icon=bootloader/res/stock_boot.bmp
