--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 title: Animal Crossing Modding
 description: A central source of info for modding AC. 
 show_downloads: true
-google_analytics:
+google_analytics: G-K4Z6G4GC6C
 theme: jekyll-theme-hacker
