--- a/_config.yml
+++ b/_config.yml
@@ -2,4 +2,7 @@ title: Animal Crossing Modding
 description: A central source of info for modding AC. 
 show_downloads: true
 google_analytics: G-K4Z6G4GC6C
-theme: jekyll-theme-hacker
+remote_theme: pages-themes/hacker@v0.2.0
+plugins:
+- jekyll-remote-theme # add this line to the plugins list if you already have one
+gem "github-pages", group: :jekyll_plugins
